--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SunnyWeather</string>
+    <string name="app_name">one天气</string>
     <string name="search_layout">输入地址</string>
     <string name="forecast">预报</string>
     <string name="life_index">生活指数</string>
